# PanoramaEngine

./: .gitignore  CMakeLists.txt  README.md  panorama_engine.buildscript
adapters/: README.md  panorama_d3d12_backend.hpp  panorama_vulkan_backend.hpp
adapters/shaders/: README.md  panorama_ui.frag  panorama_ui.frag.spv.inl  panorama_ui.vert  panorama_ui.vert.spv.inl
docs/: README.md  architecture.md  building.md  integration.md  panorama-support.md
examples/: README.md  examples.buildscript
examples/01_hello_layout/: main.cpp
examples/02_software_raster/: main.cpp
examples/03_scripted_ui/: main.cpp
examples/04_window_raster/: posix_main.cpp  raster_view.hpp  win32_main.cpp
examples/04_window_raster/sample/: raster.xml
examples/04_window_raster/sample/scripts/: app.js
examples/04_window_raster/sample/styles/: raster.css
include/ui/panorama/: panorama_anim.hpp  panorama_converter.hpp  panorama_diagnostics.hpp  panorama_document_session.hpp  panorama_dom.hpp  panorama_engine.hpp  panorama_font_atlas.hpp  panorama_geometry_cache.hpp  panorama_input.hpp  panorama_layout.hpp  panorama_localization.hpp  panorama_log.hpp  panorama_package.hpp  panorama_paint.hpp  panorama_render_backend.hpp  panorama_resource_provider.hpp  panorama_runtime.hpp  panorama_source_cooker.hpp  panorama_style.hpp  panorama_text_break.hpp  panorama_text_edit.hpp  panorama_view.hpp  panorama_xml.hpp
src/: panorama_anim.cpp  panorama_converter.cpp  panorama_diagnostics.cpp  panorama_document_session.cpp  panorama_dom.cpp  panorama_font_atlas.cpp  panorama_geometry_cache.cpp  panorama_input.cpp  panorama_layout.cpp  panorama_log.cpp  panorama_package.cpp  panorama_paint.cpp  panorama_render_backend.cpp  panorama_resource_provider.cpp  panorama_runtime.cpp  panorama_source_cooker.cpp  panorama_string_util.hpp  panorama_style.cpp  panorama_text_break.cpp  panorama_text_edit.cpp  panorama_view.cpp  panorama_xml.cpp
tests/: standalone_tests.cpp
